--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "types": ["node", "jest", "@testing-library/jest-dom"]
+  },
 }
